--- a/css/index-styles.css
+++ b/css/index-styles.css
@@ -31,6 +31,11 @@
     box-sizing: border-box;
 }
 
+section {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -202,16 +207,17 @@ nav .icon-burger .line {
     left: 0 !important;
     bottom: 0 !important;
     position: absolute;
+    width: 100%;
 }
 
 .title h1 {
     font-family: 'Brotherhood' !important;
-    font-size: 280px;
+    font-size: 200px;
     font-weight: lighter;
     line-height: 60%;
     text-shadow: 5px 5px rgba(0, 0, 0, 0.7);
-    margin-left: 50px;
-    margin-top: 325.5px;
+    padding-left: 50px;
+    padding-top: 325.5px;
     margin-bottom: 0px;
 }
 
@@ -224,6 +230,22 @@ nav .icon-burger .line {
     padding-bottom: 35.5px;
     padding-right: 20px;
     padding-left: 13vh;
+    box-sizing: border-box;
+    background: rgba(34, 30, 29, 0.5);
+    margin-top: -4%;
+}
+
+.container {
+    display: grid;
+    font-size: 20px;
+    /* float: left; */
+    width: 100%;
+    /* margin-left: 0px;
+    margin-bottom: 0px;
+    padding-top: 36px;
+    padding-bottom: 35.5px;
+    padding-right: 20px;
+    padding-left: 13vh; */
     box-sizing: border-box;
     background: rgba(34, 30, 29, 0.5);
     margin-top: -4%;
@@ -246,6 +268,93 @@ nav .icon-burger .line {
     color: #413b3b !important;
     font-weight: 600;
     border-radius: 3px;
+}
+
+
+/* Form */
+
+.container-1 {
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    /* border-radius: 5px; */
+    padding: 1.5rem 3rem;
+    padding-top: 40px;
+    /* margin: 20px auto; */
+    /* width: 90%; */
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 4fr));
+    grid-gap: 5px;
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+}
+
+.input-group {
+    margin-bottom: 1.5rem;
+    position: relative;
+}
+
+.input-label {
+    /* display: block; */
+    font-size: 1.3rem;
+    text-transform: uppercase;
+    color: #fff;
+    /* font-weight: bold; */
+    margin-bottom: 1rem;
+}
+
+.input,
+.options,
+select {
+    outline: #fff;
+    /* border: none; */
+    width: 100%;
+    min-height: 3rem;
+    font-size: 18px;
+    padding: 10px 10px;
+    /* font-weight: bold; */
+    color: #fff;
+    letter-spacing: 2px;
+    font-family: 'whitneylight';
+    border: 1px solid #fff;
+    background: rgba(34, 30, 29, 0.5);
+    /* resize:none; */
+    text-align-last: center;
+    text-align: center;
+    cursor: pointer;
+    /* border-radius: 5px; */
+    /* text-align: center; */
+    margin-bottom: none !important;
+}
+
+input[type=submit] {
+    /* outline: #fff; */
+    /* border: none; */
+    width: 100%;
+    min-height: 3rem;
+    font-size: 20px;
+    padding: 10px 10px;
+    font-weight: 800;
+    /* color: #fff; */
+    letter-spacing: 2px;
+    font-family: 'whitneylight';
+    border: none;
+    background: #efefef;
+    color: #413b3b !important;
+    /* background: rgba(34, 30, 29, 0.5); */
+    /* resize:none; */
+    text-align-last: center;
+    text-align: center;
+    cursor: pointer;
+    /* border-radius: 5px; */
+    /* text-align: center; */
+    text-transform: uppercase;
+    margin-top: 23px;
+    margin-bottom: none !important;
+}
+
+::-webkit-calendar-picker-indicator {
+    filter: invert(1);
 }
 
 
@@ -295,15 +404,15 @@ nav .icon-burger .line {
 }
 
 @media screen and (min-width: 1500px) {
-    .title h1 {
+    /* .title h1 {
         font-size: 240px;
     }
     .title p {
         width: 80%;
-    }
+    } */
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1200px) {
     .title h1 {
         font-size: 200px;
         bottom: 0;
@@ -317,6 +426,9 @@ nav .icon-burger .line {
     }
     .title a {
         font-size: 20px;
+    }
+    .container {
+        width: 100%;
     }
 }
 
