--- a/css/accomodation.css
+++ b/css/accomodation.css
@@ -1,23 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap');
-
-:root{
+:root {
     --transition: all 0.7s ease;
     --yellow: #f9d342;
     --dark: #292826;
 }
-*{
+
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-   font-family: Helvetica;
+    font-family: Helvetica;
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
-body{
+
+
+/* 
+body {
+    line-height: 1.6;
+} */
+
+.page-content {
     line-height: 1.6;
 }
-.btn{
+
+.btn {
     font-size: 16px;
     text-transform: uppercase;
     font-weight: 600;
@@ -30,14 +39,15 @@ body{
     cursor: pointer;
     transition: var(--transition);
 }
-.btn:hover{
+
+.btn:hover {
     opacity: 0.85;
 }
 
 
-
 /** title */
-.title{
+
+.title {
     text-transform: uppercase;
     letter-spacing: 3px;
     font-size: 30px;
@@ -47,127 +57,148 @@ body{
     margin: 15px 0;
 }
 
-.sec-width{
+.sec-width {
     width: 85vw;
     margin: 0 auto!important;
 }
 
+
 /* service */
-.services{
+
+.services {
     margin: 40px 0;
 }
-.service{
+
+.service {
     display: flex;
     margin: 30px 0;
 }
-.service-icon{
+
+.service-icon {
     flex: 30%;
     align-self: flex-start;
     font-size: 48px;
     color: #312d2c;
 }
-.service-content{
+
+.service-content {
     padding-left: 20px;
 }
-.service-content h2{
+
+.service-content h2 {
     opacity: 0.7;
-
-
 }
-.service-content button{
+
+.service-content button {
     margin-left: 0;
     margin-right: 0;
     background: #312d2c;
     color: #fff;
 }
-@media(min-width: 992px){
-    .services-container{
+
+@media(min-width: 992px) {
+    .services-container {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-column-gap: 30px;
     }
-    .title h2{
-        font-size: 10px!important;
-    }
-}
-@media(max-width: 500px){
-    .title h2{
+    .title h2 {
+        /* font-size: 10px!important; */
         font-size: 24px;
     }
 }
+
+@media(max-width: 500px) {
+    .title h2 {
+        font-size: 24px;
+    }
+}
+
+
 /* room */
 
-.rooms{
+.rooms {
     margin: 40px 0;
 }
-.room{
+
+.room {
     margin: 45px 0;
     padding-bottom: 25px;
     background: #f8f8f8;
     color: #413b3b;
 }
-.room-text{
+
+.room-text {
     padding: 5px 20px;
 }
-.room-text h3{
+
+.room-text h3 {
     font-size: 24px;
-	font-family: Helvetica;
+    font-family: Helvetica;
 }
-.room-text ul{
+
+.room-text ul {
     list-style-type: none;
     margin: 15px 0;
-	font-family: Helvetica;
+    font-family: Helvetica;
 }
-.room-text ul li{
+
+.room-text ul li {
     padding: 7px 0;
 }
-.room-text ul li i{
+
+.room-text ul li i {
     color: #413b3b;
     margin-right: 10px;
-
 }
-.room-text button{
-	 background: #312d2c;
+
+.room-text button {
+    background: #312d2c;
     color: #fff;
 }
-.room-image{
+
+.room-image {
     overflow: hidden;
 }
-.room-image img{
+
+.room-image img {
     transition: var(--transition);
 }
-.room-image:hover img{
+
+.room-image:hover img {
     transform: scale(1.1);
 }
-@media (min-width: 900px){
-    .rooms-container{
+
+@media (min-width: 900px) {
+    .rooms-container {
         display: flex;
         flex-wrap: wrap;
     }
-    .room{
+    .room {
         flex: 0 0 calc(50% - 20px);
         margin: 10px;
     }
 }
-@media(min-width: 1370px){
-    .rooms-container{
+
+@media(min-width: 1370px) {
+    .rooms-container {
         flex-direction: column;
     }
-    .room{
+    .room {
         display: flex;
         padding-bottom: 0;
         margin: 5px 0;
     }
-    .room-image{
+    .room-image {
         flex: 1;
     }
-    .room-image img{
+    .room-image img {
         height: 100%;
     }
-    .room-text{
+    .room-text {
         flex: 1;
     }
-    .room:nth-child(even){
+    .room:nth-child(even) {
         flex-direction: row-reverse;
     }
 }
