--- a/css/footer.css
+++ b/css/footer.css
@@ -1,143 +1,146 @@
 @font-face {
-	font-family: "whitneylight";
-	src: url("fonts/whitneylight.otf");
+    font-family: "whitneylight";
+    src: url("fonts/whitneylight.otf");
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 footer {
-	line-height: 1.5;
-	font-family: "whitneylight";
+    line-height: 1.5;
+    font-family: "whitneylight";
 }
 
-footer .container {
-	max-width: 1170px;
-	margin: auto;
+footer .footer-container {
+    max-width: 1170px;
+    margin: auto;
+    padding: 0 !important;
+    display: block;
 }
 
-footer .container .row {
-	/* display: flex; */
-	/* flex-wrap: wrap; */
-	grid-template-columns: 2fr 2.5fr 2fr;
-	display: grid;
-	grid-column-gap: 10px;
-	font-size: 20px;
+footer .footer-container .row {
+    /* display: flex; */
+    /* flex-wrap: wrap; */
+    grid-template-columns: 2fr 2.5fr 2fr;
+    display: grid;
+    grid-column-gap: 10px;
+    font-size: 20px;
 }
 
-footer .container .row .footer-col ul {
-	list-style: none;
+footer .footer-container .row .footer-col ul {
+    list-style: none;
 }
 
 footer {
-	background-color: #413b3b !important;
-	padding-top: 70px;
-	padding-bottom: 20px;
-	display: grid;
-	align-items: center;
+    background-color: #413b3b !important;
+    padding-top: 70px;
+    padding-bottom: 20px;
+    display: grid;
+    align-items: center;
 }
 
 .footer-col {
-	padding: 0 15px;
-	width: 100%;
+    padding: 0 15px;
+    width: 100%;
 }
 
 .footer-col h4 {
-	font-size: 18px;
-	color: #ffffff;
-	text-transform: uppercase;
-	margin-bottom: 35px;
-	font-weight: 500;
-	position: relative;
+    font-size: 18px;
+    color: #ffffff;
+    text-transform: uppercase;
+    margin-bottom: 35px;
+    font-weight: 500;
+    position: relative;
 }
 
 .footer-col h4::before {
-	padding: 0 15px;
-	content: "";
-	position: absolute;
-	left: 0;
-	bottom: -10px;
-	background-color: #ffffff;
-	height: 2px;
-	box-sizing: border-box;
-	width: 50px;
+    padding: 0 15px;
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    background-color: #ffffff;
+    height: 2px;
+    box-sizing: border-box;
+    width: 50px;
 }
 
 .footer-col ul li:not(:last-child) {
-	margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .footer-col ul li {
-	font-size: 16px;
-	text-transform: capitalize;
-	color: #ffffff;
-	text-decoration: none;
-	font-weight: 300;
-	color: #bbbbbb;
-	display: block;
+    font-size: 16px;
+    text-transform: capitalize;
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: 300;
+    color: #bbbbbb;
+    display: block;
 }
 
 .footer-col ul li a {
-	font-size: 16px;
-	text-transform: capitalize;
-	color: #ffffff;
-	text-decoration: none;
-	font-weight: 300;
-	color: #bbbbbb;
-	display: block;
-	transition: all 0.3s ease;
+    font-size: 16px;
+    text-transform: capitalize;
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: 300;
+    color: #bbbbbb;
+    display: block;
+    transition: all 0.3s ease;
 }
 
 .footer-col ul li a:hover {
-	color: #ffffff;
-	padding-left: 8px;
+    color: #ffffff;
+    padding-left: 8px;
 }
 
 .footer-col .social-links a {
-	display: inline-block;
-	height: 40px;
-	width: 40px;
-	background-color: rgba(255, 255, 255, 0.2);
-	margin: 0 10px 10px 0;
-	text-align: center;
-	line-height: 40px;
-	border-radius: 50%;
-	color: #ffffff;
-	transition: all 0.5s ease;
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: rgba(255, 255, 255, 0.2);
+    margin: 0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #ffffff;
+    transition: all 0.5s ease;
 }
 
 .footer-col .social-links a:hover {
-	color: #24262b;
-	background-color: #ffffff;
+    color: #24262b;
+    background-color: #ffffff;
 }
 
-footer .container .copyright a {
-	color: #bbbbbb !important;
-	text-decoration: none;
+footer .footer-container .copyright a {
+    color: #bbbbbb !important;
+    text-decoration: none;
 }
 
-footer .container .copyright {
-	color: #bbbbbb !important;
-	margin-top: 20px;
-	text-align: center;
-	text-decoration: none;
+footer .footer-container .copyright {
+    color: #bbbbbb !important;
+    margin-top: 20px;
+    text-align: center;
+    text-decoration: none;
 }
+
 
 /*responsive*/
 
 @media (max-width: 767px) {
-	.footer-col {
-		/* width: 50%; */
-		/* margin-bottom: 30px; */
-	}
-	footer .container .row {
-		/* display: block; */
-	}
+    .footer-col {
+        /* width: 50%; */
+        /* margin-bottom: 30px; */
+    }
+    footer .footer-container .row {
+        /* display: block; */
+    }
 }
 
 @media (max-width: 574px) {
-	.footer-col {
-		width: 100%;
-	}
-	footer .container .row {
-		display: block;
-	}
+    .footer-col {
+        width: 100%;
+    }
+    footer .footer-container .row {
+        display: block;
+    }
 }
