NAV FOOTER FOR ALMOST ALL

--- a/css/navigation-bar.css
+++ b/css/navigation-bar.css
@@ -56,6 +56,19 @@ nav .links li {
     list-style: none;
 }
 
+nav .logo a {
+    font-family: "whitneylight" !important;
+    float: left;
+    /* width: 40%; */
+    width: auto;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    font-size: 24px;
+    color: #fff;
+    text-decoration: none;
+}
+
 nav .links a {
     font-family: "whitneylight" !important;
     display: block;
