--- a/css/sign-in-style.css
+++ b/css/sign-in-style.css
@@ -22,6 +22,7 @@ body {
 .login-page {
     min-height: 100vh;
     padding: 15px;
+    padding-top: 5rem;
     background-color: #eeeeee;
     display: flex;
     flex-wrap: wrap;
@@ -140,7 +141,7 @@ body {
     position: absolute;
     background-color: #ffffff;
     height: 100%;
-    width: 70%;
+    width: 100%;
     right: 0;
     top: 0;
     padding: 30px;
@@ -266,6 +267,9 @@ body {
     .login-page .box {
         flex: 0 0 100%;
         max-width: 100%;
+    }
+    .login-page .box .form h3 {
+        width: 100%;
     }
 }
 
