--- a/css/footer.css
+++ b/css/footer.css
@@ -6,7 +6,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 footer {
     line-height: 1.5;
-    font-family: "whitneylight";
+    font-family: "whitneylight" !important;
+    bottom: 0;
+    width: 100%;
+    bottom: 0;
 }
 
 footer .footer-container {
@@ -49,6 +52,7 @@ footer {
     margin-bottom: 35px;
     font-weight: 500;
     position: relative;
+    font-family: "whitneylight" !important;
 }
 
 .footer-col h4::before {
@@ -86,6 +90,7 @@ footer {
     color: #bbbbbb;
     display: block;
     transition: all 0.3s ease;
+    font-family: "whitneylight" !important;
 }
 
 .footer-col ul li a:hover {
