--- a/css/navigation-bar.css
+++ b/css/navigation-bar.css
@@ -45,7 +45,7 @@ nav .links {
     float: right;
     padding: 0;
     margin: 0;
-    width: 800px;
+    /* width: 800px; */
     height: 100%;
     display: flex;
     justify-content: space-around;
