--- a/css/admin1.css
+++ b/css/admin1.css
@@ -1,17 +1,21 @@
-@import 'https://fonts.googleapis.com/css?family=Open+Sans:600,700';
-
-* {font-family: 'Open Sans', sans-serif;}
+/* @import 'https://fonts.googleapis.com/css?family=Open+Sans:600,700';
+* {
+    font-family: 'Open Sans', sans-serif;
+}
 
 body {
-background: white;
-      
-}
+    background: white;
+} */
+
 h1 {
-  text-align: center;
-  font-size: 2.4em;
-  color: black;
+    text-align: center;
+    font-size: 2.4em;
+    color: black;
+    padding-top: 3rem;
 }
-.container {
+
+
+/* .container {
   display: block;
   text-align: center;
 }
@@ -112,4 +116,70 @@ h1 {
     padding: 1em !important;
   }
 
+} */
+
+::selection {
+    color: #fff;
+    background: black;
+}
+
+page-content {
+    font-size: 2rem;
+    background-color: #f8f8f8 !important;
+}
+
+.thead-light {
+    background-color: #413b3b;
+    color: #f8f8f8;
+}
+
+table {
+    width: 100%;
+    max-width: 800px;
+    margin: 40px auto;
+    box-shadow: 0px 4px 20px rgba(5, 57, 94, .5);
+    -moz-box-shadow: 0px 4px 20px rgba(5, 57, 94, .5);
+    -webkit-box-shadow: 0px 4px 20px rgba(5, 57, 94, .5);
+}
+
+@media screen and (max-width:767px) {
+    table {
+        box-shadow: none;
+    }
+    table thead {
+        display: none;
+    }
+    table tbody {
+        padding: 0 16px;
+    }
+    table tbody,
+    table tbody tr {
+        display: block;
+        width: 100%;
+    }
+    table tbody tr td::before,
+    table tbody tr th::before {
+        content: attr(data-title);
+        display: block;
+        /* font-weight: 600; */
+        font-size: 12px;
+        color: #636363;
+    }
+    table tbody tr td,
+    table tbody tr th {
+        display: block;
+        width: 50%;
+        float: left;
+        font-size: 20px;
+        color: #000;
+        font-weight: 700;
+    }
+    table tbody tr {
+        margin-bottom: 16px;
+        float: left;
+        clear: both;
+        box-shadow: 0px 4px 20px rgba(5, 57, 94, .5);
+        -moz-box-shadow: 0px 4px 20px rgba(5, 57, 94, .5);
+        -webkit-box-shadow: 0px 4px 20px rgba(5, 57, 94, .5);
+    }
 }
