--- a/css/book-now.css
+++ b/css/book-now.css
@@ -255,6 +255,18 @@ body {
     grid-gap: 20px;
 }
 
+.container-4 {
+    /* text-align: center; */
+    background: #fff;
+    /* border-radius: 5px; */
+    padding: 0 1.5rem;
+    margin: 10px auto;
+    /* width: 90%; */
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 4fr));
+    grid-gap: 20px;
+}
+
 .container header {
     font-size: 35px;
     font-weight: 600;
@@ -318,6 +330,10 @@ body {
     color: #000;
     font-weight: bold;
     margin-bottom: 1rem;
+}
+
+.outline {
+    border: 1px solid #888888;
 }
 
 .input-label-form {
