--- a/css/admin1.css
+++ b/css/admin1.css
@@ -8,10 +8,12 @@ body {
 } */
 
 h1 {
-    text-align: center;
+    /* text-align: center; */
     font-size: 2.4em;
     color: black;
     padding-top: 3rem;
+    border-bottom: 5px solid #413b3b;
+    width: 50%;
 }
 
 
@@ -143,6 +145,9 @@ table {
 }
 
 @media screen and (max-width:767px) {
+    h1 {
+        width: 100%;
+    }
     table {
         box-shadow: none;
     }
