--- a/css/user.css
+++ b/css/user.css
@@ -1,145 +1,460 @@
-* {
-	margin: 0;
-	padding: 0;
-	font-family: "Ubuntu", sans-serif;
-	box-sizing: border-box;
-	text-decoration: none;
+/* * {
+    margin: 0;
+    padding: 0;
+    font-family: "Ubuntu", sans-serif;
+    box-sizing: border-box;
+    text-decoration: none;
 }
 
 body {
-	height: 100vh;
-	background: #f8f8f8;
-	background-size: cover;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+    height: 100vh;
+    background: #f8f8f8;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .profile-card {
-	width: 400px;
-	text-align: center;
-	border-radius: 8px;
-	overflow: hidden;
+    width: 400px;
+    text-align: center;
+    border-radius: 8px;
+    overflow: hidden;
 }
 
 .card-header {
-	background: #413b3b;
-	padding: 60px 40px;
-}
+    background: #413b3b;
+    padding: 60px 40px;
+} */
 
 .pic {
-	display: inline-block;
-	padding: 8px;
-	background: white;
-	margin: auto;
-	border-radius: 50%;
-	background-size: 200% 200%;
+    display: inline-block;
+    padding: 8px;
+    background: white;
+    margin: auto;
+    border-radius: 50%;
+    background-size: 200% 200%;
 }
 
+
+/* 
 @keyframes animated-gradient {
-	25% {
-		background-position: left bottom;
-	}
-	50% {
-		background-position: right bottom;
-	}
-	75% {
-		background-position: right top;
-	}
-	100% {
-		background-position: left top;
-	}
-}
+    25% {
+        background-position: left bottom;
+    }
+    50% {
+        background-position: right bottom;
+    }
+    75% {
+        background-position: right top;
+    }
+    100% {
+        background-position: left top;
+    }
+} */
 
 .pic img {
-	display: block;
-	width: 100px;
-	height: 100px;
-	border-radius: 50%;
+    display: block;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
 
+
+/* 
 .name {
-	color: #f2f2f2;
-	font-size: 28px;
-	font-weight: 600;
-	margin: 10px 0;
+    color: #f2f2f2;
+    font-size: 28px;
+    font-weight: 600;
+    margin: 10px 0;
 }
 
 .desc {
-	font-size: 18px;
-	color: #e66767;
+    font-size: 18px;
+    color: #e66767;
 }
 
 .sm {
-	display: flex;
-	justify-content: center;
-	margin: 20px 0;
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
 }
 
 .sm a {
-	color: #f2f2f2;
-	width: 56px;
-	font-size: 22px;
-	transition: 0.3s linear;
+    color: #f2f2f2;
+    width: 56px;
+    font-size: 22px;
+    transition: 0.3s linear;
 }
 
 .sm a:hover {
-	color: #e66767;
+    color: #e66767;
 }
 
 .contact-btn {
-	display: inline-block;
-	padding: 12px 50px;
-	color: #e66767;
-	border: 2px solid #e66767;
-	border-radius: 6px;
-	margin-top: 16px;
-	transition: 0.3s linear;
+    display: inline-block;
+    padding: 12px 50px;
+    color: #e66767;
+    border: 2px solid #e66767;
+    border-radius: 6px;
+    margin-top: 16px;
+    transition: 0.3s linear;
 }
 
 .contact-btn:hover {
-	background: #e66767;
-	color: #f2f2f2;
+    background: #e66767;
+    color: #f2f2f2;
 }
 
 .admin-btn {
-	display: inline-block;
-	padding: 12px 50px;
-	background-color: #413b3b;
-	color: white;
-	margin-top: 8px;
-	transition: 0.3s linear;
+    display: inline-block;
+    padding: 12px 50px;
+    background-color: #413b3b;
+    color: white;
+    margin-top: 8px;
+    transition: 0.3s linear;
 }
+
 .admin-btn:hover {
-	background: white;
-	color: black;
-	border: 1px solid black;
+    background: white;
+    color: black;
+    border: 1px solid black;
 }
+
 .card-footer {
-	background: white;
-	padding: 60px 10px;
+    background: white;
+    padding: 60px 10px;
 }
 
 .numbers {
-	display: flex;
-	align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .item {
-	flex: 1;
-	text-transform: uppercase;
-	font-size: 13px;
-	color: #e66767;
+    flex: 1;
+    text-transform: uppercase;
+    font-size: 13px;
+    color: #e66767;
 }
 
 .item span {
-	display: block;
-	color: #2c3a47;
-	font-size: 30px;
+    display: block;
+    color: #2c3a47;
+    font-size: 30px;
 }
 
 .border {
-	width: 1px;
-	height: 30px;
-	background: #bbb;
+    width: 1px;
+    height: 30px;
+    background: #bbb;
+} */
+
+
+/* FONT */
+
+@font-face {
+    font-family: 'Whitney-Light';
+    src: url('fonts/whitneylight.otf');
+}
+
+
+/* HTML */
+
+body {
+    font-family: 'Whitney-Light';
+    margin: 0;
+    line-height: 1.5;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+}
+
+.login-page {
+    min-height: 100vh;
+    padding: 15px;
+    padding-top: 5rem;
+    background-color: #eeeeee;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.login-page .box {
+    /* background-image: url('img/bg.jpg'); */
+    background-size: cover;
+    background-position: -160px center;
+    background-repeat: repeat-x;
+    flex: 0 0 700px;
+    max-width: 700px;
+    min-height: 480px;
+    box-shadow: 0 0 10px #f8f8f8;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    z-index: 1;
+    transition: all 0.5s ease-in-out;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.login-page .box.slide-active {
+    background-position: 160px center;
+}
+
+.login-page .box::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.login-page .box .left,
+.login-page .box .right {
+    background-color: #413b3b;
+    flex: 0 0 30%;
+    max-width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 40px 0;
+}
+
+.login-page .box .middle {
+    background-color: #413b3b;
+    flex: 0 0 40%;
+    max-width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 40px 0;
+}
+
+.login-page .box .form .box-hidden {
+    flex: none !important;
+    visibility: hidden;
+    opacity: 0;
+    overflow: hidden;
+    display: none;
+}
+
+.login-page .box .form .box-view {
+    flex: none !important;
+    max-width: 100%;
+}
+
+.login-page .box .left h3,
+.login-page .box .right h3 {
+    font-size: 20px;
+    color: #ffffff;
+    /* margin: 0 0 15px; */
+}
+
+.login-page .box .left p,
+.login-page .box .right p {
+    font-size: 11px;
+    color: #ffffff;
+    margin: 10px;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.login-page .box .left .register-btn,
+.login-page .box .right .login-btn {
+    background-color: transparent;
+    padding: 10px 35px;
+    color: #ffffff;
+    border: 1px solid #ffffff;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 3px;
+}
+
+.login-page .box .left .register-btn:focus,
+.login-page .box .right .login-btn:focus {
+    outline: none;
+}
+
+.login-page .box .left .register-btn:hover,
+.login-page .box .right .login-btn:hover {
+    color: #413b3b;
+    font-weight: 500;
+    background: #efefef;
+}
+
+.login-page .box .form {
+    position: absolute;
+    background-color: #ffffff;
+    height: 100%;
+    width: 100%;
+    right: 0;
+    top: 0;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: all 0.5s ease-in-out;
+}
+
+.login-page .box.slide-active .form {
+    right: 30%;
+}
+
+.login-page .box .form h3 {
+    font-size: 30px;
+    color: #413b3b;
+    margin: 0 0 30px;
+    text-transform: uppercase;
+    border-bottom: 5px solid #413b3b;
+    width: 50%;
+}
+
+.login-page .box .form .form-group {
+    margin-bottom: 20px;
+}
+
+.login-page .box .form .lost-password-form,
+.login-page .box .form .login-form,
+.login-page .box .form .register-form {
+    transition: all 0.5s ease-in-out;
+}
+
+.login-page .box .form .form-control {
+    width: 100%;
+    height: 45px;
+    font-size: 16px;
+    color: #000000;
+    border: none;
+    border-bottom: 1px solid #cccccc;
+    padding: 0;
+}
+
+.login-page .box .form .form-control:focus {
+    outline: none;
+}
+
+.login-page .box .form label {
+    font-size: 16px;
+    color: #312d2c;
+}
+
+.login-page .box .form .submit-btn {
+    width: 100%;
+    height: 40px;
+    /* background-color: #221e1d; */
+    background-color: #413b3b;
+    border: none;
+    border-radius: 3px;
+    color: #ffffff;
+    text-transform: uppercase;
+    margin-top: 10px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.login-page .box .form .submit-btn:focus {
+    outline: none;
+}
+
+.login-page .box .form .submit-btn:hover {
+    border: 2px solid #413b3b;
+    font-weight: 500;
+    background: none;
+    color: #413b3b;
+}
+
+.login-page .box .form p {
+    margin-top: 20px;
+    text-align: center;
+    position: absolute;
+    display: inline;
+    font-size: 20px;
+    margin-left: 10px;
+}
+
+.login-page .box .form h5 {
+    font-size: 16px;
+    color: #555555;
+    margin: 0 0 30px;
+    font-weight: normal;
+}
+
+.login-page .box .form p a {
+    font-size: 16px;
+    text-decoration: none;
+    display: inline-block;
+    color: #413b3b;
+    /* transform: translateX(-50%) translateY(-50%); */
+}
+
+.login-page .box .form p a::after {
+    content: '';
+    display: block;
+    align-items: center;
+    width: 0;
+    height: 2px;
+    background: #413b3b;
+    transition: width 0.3s ease;
+}
+
+.login-page .box .form p a:hover::after {
+    width: 100%;
+    transition: width 0.3s ease;
+}
+
+.login-page .box .form .form-hidden {
+    max-height: 0;
+    visibility: hidden;
+    opacity: 0;
+    overflow: hidden;
+}
+
+
+/*responsive*/
+
+@media(max-width: 767px) {
+    .login-page .box {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .login-page .box .form h3 {
+        width: 100%;
+    }
+}
+
+@media(max-width: 575px) {
+    .login-page .box .form {
+        width: 100%;
+        position: relative;
+        right: auto;
+        top: auto;
+        height: auto;
+    }
+    .login-page .box,
+    .login-page .box.slide-active {
+        background-position: center;
+    }
+    .login-page .box .left h3,
+    .login-page .box .right h3 {
+        font-size: 16px;
+    }
+    .login-page .box.slide-active .form {
+        right: auto;
+    }
+    .login-page .box .left,
+    .login-page .box .right {
+        max-width: 50% !important;
+        flex: none !important;
+    }
+    .login-page .box .middle {
+        display: none;
+    }
 }
