--- a/css/gal.css
+++ b/css/gal.css
@@ -1,71 +1,70 @@
 @font-face {
-	font-family: "Aadam";
-	src: url("fonts/Aadam-regular.otf");
-}
-
-@font-face {
-	font-family: "whitneylight";
-	src: url("fonts/whitneylight.otf");
+    font-family: "whitneylight";
+    src: url("fonts/whitneylight.otf");
 }
 
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'whitneylight';
 }
 
-body {
-	min-height: 100vh;
-	overflow-x: hidden;
-	background-color: #f8f8f8;
+.title {
+    font-weight: 500;
+    font-size: 30px;
+    width: 100%;
 }
+
 .container {
-	margin: 20px auto;
-	padding: 30px;
-}
-
-.main {
-	justify-content: center;
-	align-items: center;
-	margin-top: 10px;
-	width: 100vw;
-	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(300px, 300px));
-	column-gap: 10px;
-	row-gap: 10px;
-}
-
-img {
-	width: 300px;
-	height: 300px;
-	object-fit: cover;
-	object-position: center;
-}
-
-img:hover {
-	opacity: 0.5;
-	transition: 0.9s;
+    align-items: center;
+    justify-content: center;
+    /* max-width: 1080px; */
+    margin: 50px auto;
+    position: relative;
+    width: 80vw;
 }
 
 h1 {
-	text-align: center;
-	font-family: "whitneylight";
-	font-size: 50px;
-	color: rgb(0, 0, 0);
-	text-transform: uppercase;
+    color: #312d2c;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 1.5em;
+    font-weight: bold;
+    text-align: left;
+    border-bottom: 5px solid #413b3b;
 }
 
 h2 {
-	text-align: center;
-	font-family: "whitneylight";
-	height: 30px;
-	font-size: 20px;
-	color: rgb(0, 0, 0);
+    text-align: left;
+    font-size: 20px;
 }
 
-hr {
-	border: none;
-	height: 1px;
-	background: black;
-	width: 70%;
+body {
+    min-height: 100vh;
+    overflow-x: hidden;
+    background-color: #f8f8f8;
+}
+
+.main {
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 300px));
+    column-gap: 10px;
+    row-gap: 10px;
+}
+
+img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    object-position: center;
+}
+
+img:hover {
+    opacity: 0.5;
+    transition: 0.9s;
 }
