--- a/css/offers.css
+++ b/css/offers.css
@@ -1,99 +1,126 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+/* FONT */
+
+@font-face {
+    font-family: 'whitneylight';
+    src: url('fonts/whitneylight.otf');
+}
+
+
+/* HTML */
+
+* {
+    font-family: 'whitneylight';
+}
 
 .wrapper {
-	max-width: 1200px;
-	margin: auto;
-	padding: 0 20px;
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-	justify-content: space-between;
+    max-width: 1200px;
+    margin: auto;
+    padding: 0 20px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
 }
+
 .wrapper .box {
-	background: white;
-	width: calc(33% - 10px);
-	padding: 25px;
-	border-radius: 3px;
-	box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+    background: white;
+    width: calc(33% - 10px);
+    padding: 25px;
+    border-radius: 3px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
 }
+
 .wrapper .box i.quote {
-	font-size: 20px;
-	color: black;
+    font-size: 20px;
+    color: black;
 }
+
 .wrapper .box .content {
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-	justify-content: space-between;
-	padding-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 10px;
 }
+
 .box .info .name {
-	font-weight: 600;
-	font-size: 17px;
+    font-weight: 600;
+    font-size: 17px;
 }
+
 .box .info .job {
-	font-size: 16px;
-	font-weight: 500;
-	color: black;
+    font-size: 16px;
+    font-weight: 500;
+    color: black;
 }
+
 .box .info .stars {
-	margin-top: 2px;
+    margin-top: 2px;
 }
+
 .box .info .stars i {
-	color: black;
+    color: black;
 }
+
 .box .content .image {
-	height: 75px;
-	width: 75px;
-	padding: 3px;
-	background: black;
-	border-radius: 50%;
+    height: 75px;
+    width: 75px;
+    padding: 3px;
+    background: black;
+    border-radius: 50%;
 }
+
 .content .image img {
-	height: 100%;
-	width: 100%;
-	object-fit: cover;
-	border-radius: 50%;
-	border: 2px solid #fff;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 2px solid #fff;
 }
+
 .box:hover .content .image img {
-	border-color: #fff;
+    border-color: #fff;
+}
+
+.title {
+    font-weight: 500;
+    font-size: 30px;
+    width: 100%;
+}
+
+.container {
+    align-items: center;
+    justify-content: center;
+    /* max-width: 1080px; */
+    margin: 50px auto;
+    position: relative;
+    width: 70vw;
 }
 
 h1 {
-	text-align: center;
-	font-family: "whitneylight";
-	font-size: 50px;
-	color: rgb(0, 0, 0);
-	text-transform: uppercase;
+    color: #312d2c;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 1.5em;
+    font-weight: bold;
+    text-align: left;
+    border-bottom: 5px solid #413b3b;
 }
 
 h2 {
-	text-align: center;
-	font-family: "whitneylight";
-	height: 30px;
-	font-size: 20px;
-	color: rgb(0, 0, 0);
-}
-
-hr {
-	border: none;
-	height: 1px;
-	background: black;
-	width: 50%;
-}
-.container {
-	margin: auto;
+    text-align: left;
+    font-size: 20px;
 }
 
 @media (max-width: 1045px) {
-	.wrapper .box {
-		width: calc(50% - 10px);
-		margin: 10px 0;
-	}
+    .wrapper .box {
+        width: calc(50% - 10px);
+        margin: 10px 0;
+    }
 }
+
 @media (max-width: 702px) {
-	.wrapper .box {
-		width: 100%;
-	}
+    .wrapper .box {
+        width: 100%;
+    }
 }
