--- a/css/footer.css
+++ b/css/footer.css
@@ -34,7 +34,7 @@ footer .footer-container .row .footer-col ul {
 
 footer {
     background-color: #413b3b !important;
-    padding-top: 70px;
+    padding-top: 50px;
     padding-bottom: 20px;
     display: grid;
     align-items: center;
@@ -49,6 +49,7 @@ footer {
     font-size: 18px;
     color: #ffffff;
     text-transform: uppercase;
+    margin-top: 35px;
     margin-bottom: 35px;
     font-weight: 500;
     position: relative;
