--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@
 
 @font-face {
     font-family: 'Whitney-Light';
-    src: url('fonts/whitneylight.otf');
+    src: url('fonts/whitneylight.ttf');
 }
 
 
