--- a/css/user.css
+++ b/css/user.css
@@ -155,7 +155,7 @@ body {
 
 @font-face {
     font-family: 'Whitney-Light';
-    src: url('fonts/whitneylight.otf');
+    src: url('fonts/whitneylight.ttf');
 }
 
 
