--- a/css/amenities.css
+++ b/css/amenities.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: 'whitneylight';
-    src: url('fonts/whitneylight.otf');
+    src: url('fonts/whitneylight.ttf');
 }
 
 
