--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,8 @@
+/* FONT */
+
 @font-face {
-    font-family: "whitneylight";
-    src: url("fonts/whitneylight.otf");
+    font-family: 'whitneylight';
+    src: url('fonts/whitneylight.ttf');
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
