--- a/css/gal.css
+++ b/css/gal.css
@@ -1,6 +1,8 @@
+/* FONT */
+
 @font-face {
-    font-family: "whitneylight";
-    src: url("fonts/whitneylight.otf");
+    font-family: 'whitneylight';
+    src: url('fonts/whitneylight.ttf');
 }
 
 * {
