--- a/css/index-styles.css
+++ b/css/index-styles.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: 'Brotherhood';
-    src: url('fonts/Brotherhood.otf');
+    src: url('fonts/Brotherhood.ttf');
 }
 
 @font-face {
