--- a/css/book-now.css
+++ b/css/book-now.css
@@ -552,6 +552,18 @@ input[type="submit"] {
     transition: 0.5s ease;
 }
 
+input[type="submit"] {
+    width: 330px;
+    text-align: center;
+    height: 45px;
+    margin: 45px 30px;
+    display: flex;
+    position: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .form-form .page .field button:hover {
     background: #8d8583;
     color: #221e1d;
@@ -600,7 +612,8 @@ input[type="submit"] {
 
 /* Radio buttons  */
 
-input[type="radio"] {
+input[type="radio"],
+input[type="checkbox"] {
     opacity: 0;
     position: fixed;
     width: 0;
@@ -612,16 +625,18 @@ input[type="radio"] {
     width: 100%;
     font-size: 16px;
     border: 2px solid #444;
-    border-radius: 4px;
+    /* border-radius: 4px; */
 }
 
-input[type="radio"]:checked+label {
+input[type="radio"]:checked+label,
+input[type="checkbox"]:checked+label {
     background-color: #221e1d;
     border-color: #221e1d;
     color: #fff;
 }
 
-input[type="radio"]:focus+label {
+input[type="radio"]:focus+label,
+input[type="checkbox"]:focus+label {
     border: 2px solid #221e1d;
 }
 
